fixed avatar overlapping the title in mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -344,7 +344,9 @@ img {
   {% endunless %}
   display: block;
 }
-
+.avatar-img-border {
+   margin-top: 30px;
+}
 .navbar-custom.top-nav-expanded .avatar-container {
   display: none;
 }
